--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -79,6 +79,7 @@
                                        [dataLabels]="chartOptions3.dataLabels"
                                        [theme]="chartOptions3?.theme"
                                        [responsive]="chartOptions3?.responsive"
+                                       [colors]="chartOptions3?.colors"
                                        [noData]="chartOptions3.noData"></apx-chart>
                         </div>
                     </div>
@@ -95,6 +96,7 @@
                                        [dataLabels]="chartOptions4.dataLabels"
                                        [theme]="chartOptions4?.theme"
                                        [responsive]="chartOptions4?.responsive"
+                                       [colors]="chartOptions4?.colors"
                                        [noData]="chartOptions4.noData"></apx-chart>
                         </div>
                     </div>
