--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -71,6 +71,7 @@
                                 [dataLabels]="chartOptions2.dataLabels"
                                 [responsive]="chartOptions2.responsive"
                                 [noData]="chartOptions2.noData"
+                                [colors]="chartOptions2?.colors"
 
                             ></apx-chart>
                         </div>
@@ -90,6 +91,7 @@
                                 [dataLabels]="chartOptions3.dataLabels"
                                 [responsive]="chartOptions3.responsive"
                                 [noData]="chartOptions3.noData"
+                                [colors]="chartOptions3?.colors"
 
                             ></apx-chart>
                         </div>
@@ -109,6 +111,7 @@
                                 [dataLabels]="chartOptions4.dataLabels"
                                 [responsive]="chartOptions4.responsive"
                                 [noData]="chartOptions4.noData"
+                                [colors]="chartOptions4?.colors"
 
                             ></apx-chart>
                         </div>
