--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -48,6 +48,7 @@
                                    [tooltip]="chartOptions1.tooltip"
                                    [dataLabels]="chartOptions1.dataLabels"
                                    [responsive]="chartOptions1?.responsive"
+                                   [colors]="chartOptions1?.colors"
                                    [noData]="chartOptions1.noData"
                         ></apx-chart>
                     </div>
@@ -65,6 +66,7 @@
                                    [tooltip]="chartOptions2.tooltip"
                                    [dataLabels]="chartOptions2.dataLabels"
                                    [responsive]="chartOptions2?.responsive"
+                                   [colors]="chartOptions2?.colors"
                                    [noData]="chartOptions2.noData"
                         ></apx-chart>
                     </div>
