--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -63,6 +63,7 @@
                                        [tooltip]="chartLoanPortfolio.tooltip"
                                        [dataLabels]="chartLoanPortfolio.dataLabels"
                                        [responsive]="chartLoanPortfolio?.responsive"
+                                       [colors]="chartLoanPortfolio?.colors"
                                        [noData]="chartLoanPortfolio.noData"></apx-chart>
                         </div>
                     </div>
@@ -82,6 +83,7 @@
                                        [tooltip]="chartnoOfBorrowers.tooltip"
                                        [dataLabels]="chartnoOfBorrowers.dataLabels"
                                        [responsive]="chartnoOfBorrowers?.responsive"
+                                       [colors]="chartnoOfBorrowers?.colors"
                                        [noData]="chartnoOfBorrowers?.noData"></apx-chart>
                         </div>
                     </div>
