--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -50,6 +50,7 @@
                                 [tooltip]="chartOptions.tooltip"
                                 [dataLabels]="chartOptions.dataLabels"
                                 [responsive]="chartOptions?.responsive"
+                                [colors]="chartOptions?.colors"
                                 [noData]="chartOptions?.noData"
 
                             ></apx-chart>
