--- a/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
@@ -79,8 +79,8 @@
                     <td>{{mcoDiary?.RecNoOfLegalNoticeDelivered}}</td>
                     <td>{{mcoDiary?.RecNoOfDefaulterContacted}}</td>
                     <td></td>
-                    <td>{{mcoDiary?.TotFarmersContacted}}</td>
-                    <td>{{mcoDiary?.TotNoOfFarmersVisisted}}</td>
+                    <td>{{mcoDiary?.TOTFarmersContacted}}</td>
+                    <td>{{mcoDiary?.TOTNoOfFarmersVisisted}}</td>
                     <td>{{mcoDiary?.AnyOtherWorkDone}}</td>
                     <td>{{mcoDiary?.Remarks}}</td>
 
@@ -95,22 +95,22 @@
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{{TotalNoOfCasesReceived}}</td>
+                    <td>{{TotalDisbNoOfCasesAppraised}}</td>
+                    <td>{{TotalDisbNoOfRecordVerified}}</td>
+                    <td>{{TotalDisbNoOfSanctionedAuthorized}}</td>
+                    <td>{{TotalDisbSanctionLetterDelivered}}</td>
+                    <td>{{TotalDisbSupplyOrderDelivered}}</td>
+                    <td>{{TotalNoOfSanctnMutationVerified}}</td>
+                    <td>{{TotalNoOfUtilizationChecked}}</td>
+                    <td>{{TotalRecNoOfNoticeDelivered}}</td>
+                    <td>{{TotalRecNoOfLegalNoticeDelivered}}</td>
+                    <td>{{TotalRecNoOfDefaulterContacted}}</td>
                     <td>-
                         <div class="w-36"></div>
                     </td>
-                    <td>-</td>
-                    <td></td>
+                    <td>{{TotalTOTFarmersContacted}}</td>
+                    <td>{{TotalTOTNoOfFarmersVisisted}}</td>
                     <td>-</td>
                     <td>-</td>
                 </tr>
@@ -149,27 +149,27 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"
-                                        appearance="outline">
-                            <input matInput>
-                        </mat-form-field>
+                    <td>{{systemGenerated?.DAnnualTarget}}</td>
+                    <td>{{systemGenerated?.DPropoTargetEOM}}</td>
+                    <td>{{systemGenerated?.DDisbDuringMonth}}</td>
+                    <td>{{systemGenerated?.DTotalDisbDuringMonth }}</td>
+                    <td>{{systemGenerated?.DIncreaseDeficit}}</td>
+                    <!-- Mutations -->
+                    <td>{{systemGenerated?.MNoMutationPendingPM }}</td>
+                    <td>{{systemGenerated?.MNoDisbDuringMonth}}
+<!--                        <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"-->
+<!--                                        appearance="outline">-->
+<!--                            <input matInput [value]=" ">-->
+<!--                        </mat-form-field>-->
                     </td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"
-                                        appearance="outline">
-                            <input matInput>
-                        </mat-form-field>
+                    <td>{{systemGenerated?.MMutationToBeVerified}}</td>
+                    <td>{{systemGenerated?.MMutationPending}}</td>
+                    <td>{{systemGenerated?.MMutationToBeVerified}}
+<!--                        <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"-->
+<!--                                        appearance="outline">-->
+<!--                            <input matInput [value]="">-->
+<!--                        </mat-form-field>-->
                     </td>
-                    <td></td>
                 </tr>
 
                 </tbody>
@@ -224,33 +224,34 @@
                 </thead>
                 <tbody>
                 <tr>
+                    <td>{{systemGenerated?.UUtilizationPendingPM}}
+<!--                        <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"-->
+<!--                                        appearance="outline">-->
+<!--                            <input matInput>-->
+<!--                        </mat-form-field>-->
+                    </td>
+                    <td>{{systemGenerated?.UNoOfCasesDisbursed }}</td>
+                    <td>{{systemGenerated?.UNoOfUtliztionToVerify }}</td>
                     <td>
                         <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"
                                         appearance="outline">
-                            <input matInput>
+                            <input matInput [value]="systemGenerated?.UUtilizationVerified">
                         </mat-form-field>
                     </td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <mat-form-field class=" mat-form-field-fluid w-full" style="width: 12rem !important"
-                                        appearance="outline">
-                            <input matInput>
-                        </mat-form-field>
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{{systemGenerated?.UPendingCasesChecking }}</td>
+                    <td>{{systemGenerated?.RTPastDuesNo  }}</td>
+                    <td>{{systemGenerated?.RTPstDuesAmount  }}</td>
+                    <td>{{systemGenerated?.RTCurrentDuesNo  }}</td>
+                    <td>{{systemGenerated?.RTCurrentDuesAmount  }}</td>
+                    <td>{{systemGenerated?.RRPastDuesNo  }}</td>
+                    <td>{{systemGenerated?.RRPastDuesAmount  }}</td>
+                    <td>{{systemGenerated?.RRCurrentDuesNo  }}</td>
+                    <td>{{systemGenerated?.RRCurrentDuesAmount  }}</td>
+                    <td>{{systemGenerated?.RBPastDuesNo  }}</td>
+                    <td>{{systemGenerated?.RBPastDuesAmount  }}</td>
+                    <td>{{systemGenerated?.RBCurrentDuesNo  }}</td>
+                    <td>{{systemGenerated?.RBCurrentDuesAmount  }}</td>
+
                 </tr>
                 </tbody>
             </table>
