--- a/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
+++ b/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
@@ -123,6 +123,8 @@
 <!--                            <th>Purpose</th>-->
                             <th>Remarks</th>
                             <th>Status</th>
+                            <th>Actions</th>
+
 
                         </tr>
                         </thead>
@@ -139,7 +141,12 @@
                                 </p>
                             </td>
                             <td style="width: 20%">{{child.StatusName}}</td>
-
+                            <td>
+                                <button mat-icon-button color="primary" *ngIf="CheckDirectionStatus(child)"
+                                        (click)="redirectTourDiary(child)">
+                                    <mat-icon style="margin-left: 5px;" title="edit tour diary">edit</mat-icon>
+                                </button>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
