--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -319,21 +319,28 @@
                                 </tr>
                                 </thead>
                                 <tbody>
+
                                 <tr>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.PortfolioGeneralNo}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.PortfolioGeneralAmount}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.PortfolioNplNo}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.PortfolioNplAmount}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.PortfolioSamNo}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.PortfolioSamAmount}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.AnnualTargetPD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.AnnualTargetCD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.AnnualTargetTotal}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.ProportionatTargetPD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.ProportionatTargetCD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.ProportionatTargetTotal}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.RecoveryTargetPD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.RecoveryTargetCD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.RecoveryTargetTotal}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.BalanceRecoverabletPD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.BalanceRecoverableCD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.BalanceRecoverableTotal}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.RecoveryDuringCorrespondingPeroid}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated.IncreaseDeficit}}</td>
                                 </tr>
                                 </tbody>
                             </table>
