--- a/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
+++ b/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
@@ -85,97 +85,19 @@
 
 
     <!-- Header -->
-
-    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50"
-         style="flex-direction: column;overflow-y: scroll">
-        <div class="example-table-container  px-2">
-
-            <!--           table -->
-
-            <div class="custom-accordion   rounded-lg my-2 bg-white shadow-sm border"
-                 *ngFor="let activity of TourDiarys | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} ; let i = index;">
-                <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
-                     style="cursor: pointer">
-                    <div class=" self-center ml-8">
-                        <span class=" text-green">
-                            {{dateChange(activity?.TourDate)}}
-                        </span>
-                    </div>
+    <mat-tab-group [ngClass]="{'dash-tab': TourDiarys?.length == 1}"
+                   class="pt-3 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3"
+                   style="flex-direction: column; overflow-y: scroll"
+                   animationDuration="200ms" style="background-color: white;">
 
 
-                    <div class="mr-5">
-                        <button mat-icon-button id="{{'arrow_down_'+i}}" style="display: block">
-                            <mat-icon>expand_more</mat-icon>
-                        </button>
-                        <button mat-icon-button id="{{'arrow_up_'+i}}" style="display:none;">
-                            <mat-icon>expand_less</mat-icon>
-                        </button>
-                    </div>
-                </div>
-                <div class="custom-accordion-body" id="{{'table_'+i}}" style="display: none">
-                    <table class="table table-responsive" style="display: inline-table !important;">
-                        <thead class="thead-light">
-                        <tr class="table-header-background">
-                            <th>Zone</th>
-                            <th>Branch</th>
-                            <th>Circle</th>
-                            <th>Tour Date</th>
-<!--                            <th>Purpose</th>-->
-                            <th>Remarks</th>
-                            <th>Status</th>
-                            <th>Actions</th>
+        <ng-container *ngFor="let item of TourDiarys;let i=index;">
+            <mat-tab [label]="item?.Heading">
+                <app-search-tour-diary-tab [TourDiary]="item" [branch]="branch" [zone]="zone"
+                                           [circle]="circle"
+                                           [tab_number]="i"></app-search-tour-diary-tab>
+            </mat-tab>
+        </ng-container>
+    </mat-tab-group>
 
-
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr *ngFor="let child of activity?.TourDiariesByDate">
-                            <td style="width: 20%">{{child?.ZoneName ? child?.ZoneName : "-"}}</td>
-                            <td style="width: 20%">{{child?.BranchName ? child?.BranchName : "-"}}</td>
-                            <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
-                            <td style="width: 20%">{{dateChange(child?.TourDate)}}</td>
-<!--                            <td style="width: 20%">{{child.PurposeName}}</td>-->
-                            <td [title]="child.Remarks">
-                                <p class="remarks-box">
-                                    {{child.Remarks.slice(0, 30)}}
-                                </p>
-                            </td>
-                            <td style="width: 20%">{{child.StatusName}}</td>
-                            <td>
-                                <button mat-icon-button color="primary" *ngIf="CheckDirectionStatus(child)"
-                                        (click)="redirectTourDiary(child)">
-                                    <mat-icon style="margin-left: 5px;" title="edit tour diary">edit</mat-icon>
-                                </button>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-            </div>
-
-
-            <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>
-            <div class="mat-table__message" *ngIf="loading">Please wait....</div>
-        </div>
-    </div>
-    <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
-        <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-        <span class="font-bold text-green">Items per page:</span>
-
-        <mat-select class="border-2 pl-1 py-2" display="inline" [(value)]="itemsPerPage"
-                    (valueChange)="paginate(1,$event)"
-                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-            <mat-option [value]="5">5</mat-option>
-            <mat-option [value]="10">10</mat-option>
-            <mat-option [value]="25">25</mat-option>
-            <mat-option [value]="50">50</mat-option>
-        </mat-select>
-        <button (click)="paginate(1)">First</button>
-        <pagination-controls display="inline" (pageChange)="paginate($event)"
-                             style="display: inline-block;"></pagination-controls>
-        <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b class="text-green">{{totalItems}}</b> items</p>
-
-    </div>
 </div>
