--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -448,7 +448,7 @@
                                 <tr>
                                     <td class="border-r border-gray-400"></td>
                                     <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
+                                    <td class="border-r border-gray-400">{{systemGenerated?.DTotalDisbEOPM}}</td>
                                     <td class="border-r border-gray-400"></td>
                                     <td class="border-r border-gray-400"></td>
                                     <td class="border-r border-gray-400"></td>
@@ -503,7 +503,7 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td class="border-r border-gray-400"></td>
+                                    <td class="border-r border-gray-400">sam</td>
                                     <td class="border-r border-gray-400"></td>
                                     <td class="border-r border-gray-400"></td>
                                     <td class="border-r border-gray-400"></td>
