opening balance name fix

--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -82,7 +82,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Opening Blanace</td>
+                            <td>Opening Balance</td>
                             <td>{{UtilizationMutation?.UtilizationOpenningBalance}}</td>
                             <td>{{UtilizationMutation?.MutationOpenningBalance}}</td>
                             <td>{{UtilizationMutation?.AuditParaOpenningBalance}}</td>
