--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -227,7 +227,7 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>Opening Blanace</td>
+                        <td>Opening Balance</td>
                         <td>{{UtilizationMutation?.UtilizationOpenningBalance}}</td>
                         <td>{{UtilizationMutation?.MutationOpenningBalance}}</td>
                     </tr>
