--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box"style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions.series"
@@ -60,7 +60,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling"style="height: 365px;">
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" style="height: 365px;">
                         <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
                         </app-pyramid-chart>
@@ -84,31 +84,31 @@
                             <td>
                                 <div class="d-grid">
                                     <div>
-                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
                                     <div class="fw-bold">
-                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
                                 </div>
                             </td>
                             <td>
                                 <div class="d-grid">
                                     <div>
-                                        {{dashboardService.getCamelCaseString(items[1],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[1],1)}}
-                                     </div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
                                 </div>
                             </td>
                             <td>
                                 <div class="d-grid">
                                     <div>
-                                        {{dashboardService.getCamelCaseString(items[2],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[2],1)}}
-                                     </div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
                                 </div>
                             </td>
                         </tr>
@@ -133,7 +133,7 @@
                             <th scope="col">Outstanding</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody *ngIf="CirclePositions">
                         <tr *ngFor="let item of CirclePositions | paginate: { itemsPerPage: 5, currentPage: p }">
                             <td>{{item.Name}}</td>
                             <td>{{item.TotalDisbursment}}</td>
@@ -143,8 +143,14 @@
                             <td>{{item.TotalOS}}</td>
                         </tr>
                         </tbody>
+                        <tbody *ngIf="!CirclePositions">
+                        <tr>
+                            No Data Found
+                        </tr>
+                        </tbody>
                     </table>
-                    <pagination-controls (pageChange)="p = $event" class="my-pagination"></pagination-controls>
+                    <pagination-controls *ngIf="CirclePositions" (pageChange)="p = $event"
+                                         class="my-pagination"></pagination-controls>
                 </div>
             </div>
 
