--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -17,7 +17,7 @@
 
                         <div class="col-lg-12 pt-2 px-0">
                             <div class="flex" style="flex-wrap: wrap;">
-                                <app-zone-branch-circle [form]="gridForm" [show_circle]="true"
+                                <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mr-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
