--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -32,7 +32,6 @@
                             <table class="table ">
                                 <thead>
                                 <tr class=" text-center">
-                                    <th rowspan="2"  >Actions</th>
                                     <th rowspan="2"  >Date</th>
                                     <th colspan="2" rowspan="2"  >Departure from</th>
                                     <th colspan="2" rowspan="2"  >Arrival at</th>
@@ -67,20 +66,7 @@
                                 </thead>
                                 <tbody>
                                 <tr *ngFor="let ZmTourDiary of TourDiaryList">
-                                    <td>
-                                        <button class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZmTourDiary, 'edit')" (click)="edit(ZmTourDiary); container.scrollTop = 0"
-                                        >
-                                            <mat-icon>
-                                                edit
-                                            </mat-icon>
-                                        </button>
-                                        <button mat-icon-button *ngIf="checkStatus(ZmTourDiary, 'delete')" (click)="delete(ZmTourDiary, 'C'); container.scrollTop = 0">
-                                            <mat-icon class="text-red-500">
-                                                delete_forever
-                                            </mat-icon>
-                                        </button>
 
-                                    </td>
                                     <td>{{ZmTourDiary.TourDate}}</td>
                                     <td>{{ZmTourDiary.DepartureFromPlace}}</td>
                                     <td>{{ZmTourDiary.DepartureFromTime}}</td>
@@ -217,7 +203,20 @@
 
 
     </div>
-
+    <div class="row mt-2 mr-1">
+        <div class="col-lg-12 text-right">
+            <button type="button" class="mr-2 bg-green" mat-raised-button color="primary"
+                    (click)="changeStatus('A')">
+                <mat-icon class="mr-2">check_circle</mat-icon>
+                Approve
+            </button>
+            <button type="button" class="mr-2  bg-red" mat-raised-button color="primary"
+                    (click)="changeStatus('R')">
+                <mat-icon class="mr-2">cancel</mat-icon>
+                Referback
+            </button>
+        </div>
+    </div>
 </div>
 
 <ngx-material-timepicker  #timepickerDeparture></ngx-material-timepicker>
