--- a/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
+++ b/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
@@ -91,8 +91,7 @@
             </div>
         </div>
     </div>
-
-    <mat-tab-group [ngClass]="'dash-tab'"
+    <mat-tab-group [ngClass]="{'dash-tab': TourPlans?.length == 1}"
                    class="pt-3 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3"
                    style="flex-direction: column; overflow-y: scroll"
                    animationDuration="200ms" style="background-color: white;">
