--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -319,7 +319,7 @@
                                 <button type="button" *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>{{btnText}}</button>
                                 <button type="button" *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
 
-                                <button type="button" *ngIf="isUpdate==true" mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                                <button type="button" mat-raised-button class="mr-2" color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
