--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -195,8 +195,8 @@
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
-                                <button type="button" *ngIf="isUpdate===true" mat-raised-button class="mr-2"
-                                        color="primary" (click)="changeStatus('','S')">
+                                <button type="button" mat-raised-button class="mr-2"
+                                        color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
