--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -182,7 +182,7 @@
                                 <div class="col-lg-12 text-right">
                                     <button type="button" *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
                                     <button type="button" *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
-                                    <button type="button" *ngIf="isUpdate==true" mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                                    <button type="button" mat-raised-button class="mr-2" color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
                                         <mat-icon class="mr-2">check_circle</mat-icon>
                                         Submit
                                     </button>
