--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -249,7 +249,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. Of Cases Appraised</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised"
+                                        <input matInput placeholder="No Of Cases Appraised"
                                                formControlName="DisbNoOfCasesAppraised" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -259,7 +259,7 @@
                                         <mat-label class="customMatLabel">No. of cases in which original revenue record
                                             verified
                                         </mat-label>
-                                        <input matInput placeholder="DisbNoOfRecordVerified"
+                                        <input matInput placeholder="No Of Record Verified"
                                                formControlName="DisbNoOfRecordVerified" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -268,7 +268,7 @@
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of cases sanctioned if authorized
                                         </mat-label>
-                                        <input matInput placeholder="DisbNoOfSanctionedAuthorized"
+                                        <input matInput placeholder="No Of Sanctioned Authorized"
                                                formControlName="DisbNoOfSanctionedAuthorized" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -276,7 +276,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of sanction letters delivered</mat-label>
-                                        <input matInput placeholder="DisbSanctionLetterDelivered"
+                                        <input matInput placeholder="Sanction Letter Delivered"
                                                formControlName="DisbSanctionLetterDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -284,7 +284,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of supply orders delivered</mat-label>
-                                        <input matInput placeholder="DisbSupplyOrderDelivered"
+                                        <input matInput placeholder="Supply Order Delivered"
                                                formControlName="DisbSupplyOrderDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -503,17 +503,17 @@
 
     <div class="row mt-2 mr-1">
         <div class="col-lg-12 text-right">
-            <button *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary"
+            <button  type="button" *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary"
                     (click)="saveTourDiary()">
                 <mat-icon class="mr-2">save</mat-icon>
                 Save
             </button>
-            <button *ngIf="isUpdate==true" class="ml-2 bg-green" mat-raised-button color="primary"
+            <button type="button" *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary"
                     (click)="saveTourDiary()">
                 <mat-icon class="mr-2">save</mat-icon>
                 Update
             </button>
-            <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+            <button  type="button" *ngIf="isUpdate==true"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Submit
             </button>
