--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -246,17 +246,17 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary"
+                                <button type="button"  *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary"
                                         (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button *ngIf="isUpdate==true" class="ml-2 bg-green" mat-raised-button color="primary"
+                                <button  type="button" *ngIf="isUpdate==true"  class="mr-2 bg-green" mat-raised-button color="primary"
                                         (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
-                                <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                                <button  type="button" *ngIf="isUpdate==true"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
